fixed game canvas size on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -357,7 +357,7 @@ button:hover {
     }
 
     #game-canvas {
-        height: calc(100% - 20);
+        height: calc(100%);
     }
 
     .card {
